tests/snapshots/snapshot__help_hides_the_sync_error_and_the_footer_carries_it.snap
---
source: tests/snapshot.rs
expression: out
---
 TODAY                                                                              
 ────────────────────────────────────────────────────────────────────────────────── 
  ○ Nand2Te┌────────────────────────────────────────────────────────────┐           
  ○ learn G│                                                            │           
           │                      ▀█▀ ▄▀█ ▄▀▀ █ █                       │           
 THIS WEEK │                       █  █▀█ ▀▀▄ █ █                       │           
 ──────────│                       ▀  ▀ ▀ ▄▄▀ ▀▄▀                       │────────── 
  ○ write t│                                                            │           
           │   j / k / ↓ / ↑                                     move   │           
 LATER     │   h / l / ← / →                  previous / next section   │           
 ──────────│   g / G / home / end                        top / bottom   │────────── 
  ○ read th│   space / enter                                     done   │           
           │   a                                       add (to today)   │           
           │   e                                           edit title   │           
           │   t                                        move to today   │           
           │   []                                move between buckets   │           
           │   x                                       drop (archive)   │           
           │   c                                              history   │           
           │   ?                                            this help   │           
           │   q / esc                                           quit   │           
           │   ctrl+c                                   quit anywhere   │           
           │                                                            │           
           │   data  /opt/tasu-data/Library/Application Support/tasu/   │           
           │                                               todos.json   │           
           │   sync            https://github.com/mancuoj-collective/   │           
           │                                            tasu-data.git   │           
           │                                                            │           
           └────────────────────────────────────────────────────────────┘           
                                                                                    
 ↑↓ scroll  esc close                                 ✗ auth failed · run tasu sync
