tests/snapshots/snapshot__help_summarizes_a_sync_failure_without_the_raw_error.snap
---
source: tests/snapshot.rs
expression: out
---
 TODAY                                                                              
 ────────────────────────────────────────────────────────────────────────────────── 
  ○ Nand2Tetri┌──────────────────────────────────────────────────────┐              
  ○ learn GPUI│                                                      │              
              │                   ▀█▀ ▄▀█ ▄▀▀ █ █                    │              
 THIS WEEK  41│                    █  █▀█ ▀▀▄ █ █                    │              
 ─────────────│                    ▀  ▀ ▀ ▄▄▀ ▀▄▀                    │───────────── 
  ○ write the │  j / k                                         move  │              
              │  h / l                      previous / next section  │              
 LATER        │  g / G                                 top / bottom  │              
 ─────────────│  space                                         done  │───────────── 
  ○ read the r│  a                                   add (to today)  │              
              │  e                                       edit title  │              
              │  t                                    move to today  │              
              │  [ / ]               send to previous / next bucket  │              
              │  x                                   drop (archive)  │              
              │  c                                          history  │              
              │  tab                history: done / dropped (or ←→)  │              
              │  q / esc                                       quit  │              
              │  ctrl+c                               quit anywhere  │              
              │                                                      │              
              │  data   /opt/tasu-data/Library/Application Support/  │              
              │                                     tasu/todos.json  │              
              │  sync        https://github.com/mancuoj-collective/  │              
              │                                       tasu-data.git  │              
              │        ✗ authentication failed · run tasu sync       │              
              │                                                      │              
              └──────────────────────────────────────────────────────┘              
                                                                                    
 ↑↓ scroll  esc close                                          ✗ sync failed · auth
