tests/snapshots/snapshot__help_with_sync_error.snap
---
source: tests/snapshot.rs
expression: "render(&model, 84, 26)"
---
 TODAY                                                                              
 ─────────────┌──────────────────────────────────────────────────────┐───────────── 
  ○ Nand2Tetri│                                                      │              
  ○ learn GPUI│                   ▀█▀ ▄▀█ ▄▀▀ █ █                    │              
              │                    █  █▀█ ▀▀▄ █ █                    │              
 THIS WEEK  41│                    ▀  ▀ ▀ ▄▄▀ ▀▄▀                    │              
 ─────────────│  !  fatal: repository 'you/tasu-data' not found      │───────────── 
  ○ write the │                                                      │              
              │  j / k                                         move  │              
 LATER        │  h / l                      previous / next section  │              
 ─────────────│  g / G                                 top / bottom  │───────────── 
  ○ read the r│  space                                         done  │              
              │  a                                   add (to today)  │              
              │  e                                       edit title  │              
              │  t                                    move to today  │              
              │  [ / ]               send to previous / next bucket  │              
              │  x                                   drop (archive)  │              
              │  c                                          history  │              
              │  tab                history: done / dropped (or ←→)  │              
              │  q / esc                                       quit  │              
              │  ctrl+c                               quit anywhere  │              
              │                                                      │              
              │  data                          /tmp/tasu/todos.json  │              
              │                                                      │              
              └──────────────────────────────────────────────────────┘              
 ↑↓ scroll  esc close                                                             ●
