tests/snapshots/snapshot__help_wraps_long_error_and_paths.snap
---
source: tests/snapshot.rs
expression: "render_full(&model, 84, 34,\nPath::new(\"/opt/tasu-data/Library/Application Support/tasu/todos.json\"),\nSome(\"https://github.com/mancuoj-collective/tasu-data.git\"),)"
---
 TODAY                                                                              
 ────────────────────────────────────────────────────────────────────────────────── 
  ○ Nand2Tetris chapter 6                                                           
  ○ learn GPUI┌──────────────────────────────────────────────────────┐              
              │                                                      │              
 THIS WEEK  41│                   ▀█▀ ▄▀█ ▄▀▀ █ █                    │              
 ─────────────│                    █  █▀█ ▀▀▄ █ █                    │───────────── 
  ○ write the │                    ▀  ▀ ▀ ▄▄▀ ▀▄▀                    │              
              │  j / k                                         move  │              
 LATER        │  h / l                      previous / next section  │              
 ─────────────│  g / G                                 top / bottom  │───────────── 
  ○ read the r│  space                                         done  │              
              │  a                                   add (to today)  │              
              │  e                                       edit title  │              
              │  t                                    move to today  │              
              │  [ / ]               send to previous / next bucket  │              
              │  x                                   drop (archive)  │              
              │  c                                          history  │              
              │  tab                history: done / dropped (or ←→)  │              
              │  q / esc                                       quit  │              
              │  ctrl+c                               quit anywhere  │              
              │                                                      │              
              │  data   /opt/tasu-data/Library/Application Support/  │              
              │                                     tasu/todos.json  │              
              │  sync        https://github.com/mancuoj-collective/  │              
              │                                       tasu-data.git  │              
              │                                                      │              
              │  !  fatal: could not read Username for 'https://     │              
              │     github.com': terminal prompts disabled; fatal:   │              
              │     repository not found                             │              
              │                                                      │              
              └──────────────────────────────────────────────────────┘              
                                                                                    
 ↑↓ scroll  esc close                                                 ● sync failed
